iteration 3 migrated assets

--- a/TL_map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TL_map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.455357
 AssetPropertyPicker.CurrentViewType=1
 
 [Directories2]
-UNR=C:/Users/Shervin/Documents/Unreal Projects/TowerDefense2/TL_map/Content
+UNR=../../../../../../Users/Nathan/Documents/Unreal Projects/TowerDefense2/TL_map/Content
 BRUSH=../../../../../../Users/tianz/OneDrive/Documents/Unreal Projects/Map/Content/
 FBX=../../../../../../Users/tianz/OneDrive/Documents/Unreal Projects/Map/Content/
 FBXAnim=../../../../../../Users/tianz/OneDrive/Documents/Unreal Projects/Map/Content/
@@ -1383,7 +1383,7 @@ FoliageType_InstancedStaticMesh.Scalability=True
 FoliageType_InstancedStaticMesh.VirtualTexture=True
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=LoadErrors
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
