--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ZoomReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Home)
 +ActionMappings=(ActionName="ZoomIn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PageUp)
 +ActionMappings=(ActionName="ZoomOut",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PageDown)
++ActionMappings=(ActionName="Pan",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
++ActionMappings=(ActionName="PanReset",bShift=False,bCtrl=False,bAlt=True,bCmd=False,Key=MiddleMouseButton)
++ActionMappings=(ActionName="Pan",bShift=False,bCtrl=False,bAlt=True,bCmd=False,Key=PageUp)
++ActionMappings=(ActionName="PanReset",bShift=False,bCtrl=False,bAlt=True,bCmd=False,Key=Home)
 +AxisMappings=(AxisName="Move_Foward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move_Right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Move_Foward",Scale=-1.000000,Key=S)
